Fixed display issue on narrow screens + removed rock bands section

--- a/styles.css
+++ b/styles.css
@@ -600,9 +600,6 @@ a {
 		max-width: 600px;
 		min-width: auto;
 	}	
-	.testimonial {
-		min-width: 100%;  /* Forcing a unique column */
-	}
 	.about_pic{
 		min-width: auto;
 		max-width: 400px;
@@ -632,6 +629,30 @@ a {
 
 /* Adjust global lay-out for narrowest windows */
 @media screen and (max-width: 600px) {
+	.container {
+		width: 90%;
+		max-width: 600px;
+		min-width: auto;
+	}	
+	.container-playlists {
+		width: 90%;
+		max-width: 600px;
+		min-width: auto;
+	}
+	.container-testimonials {
+		width: 90%;
+		max-width: 600px;
+		min-width: auto;
+	}
+	.container-projects {
+		width: 90%;
+		max-width: 600px;
+		min-width: auto;
+	}
+	.testimonial {
+		min-width: 100%;  /* Forcing a unique column */
+	}
+	
 	.header-container {
 		flex-direction: column;
 		align-items: flex-start;
@@ -660,14 +681,9 @@ a {
 		padding: 10px 12px;
 		text-align: left;
 	}
-	.container-playlists {
-		width: 90%;
-		max-width: 600px;
-		min-width: 600px;
+	.playlist {
+		min-width: 100%;  /* Forcing a unique column */
 	}
-	/* .playlist { */
-		/* min-width: 100%;  /* Forcing a unique column */ */
-	/* } */
 	.project p {
 		margin: 8px 8px;
 		font-size: 16px;
